[package]
name = "bettis"
version = "0.1.0"
authors = ["Jon Daniel"]

[badges]
travis-ci = { repository = "binarycleric/bettis" }

[dependencies]
resp = "1.0.2"
log = "0.4"
simple_logger = "0.5"

[dev-dependencies]
bencher = "0.1"
rand = "0.5.0-pre.1"

[[bench]]
name = "database"
harness = false

[lib]
bench = false
